--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 
 header{
     background-color: #2e3a46;
-    height: 100px;
+    height: 70px;
 }
 header img{
     height: 100%;
@@ -16,19 +16,26 @@ header img{
 }
 main{
     background-color: #1e2d3b;
-    height: 90vh;
+    display: flex;
     color: white;
+    align-items: center;
+    height: calc(100vh - 70px);
+    font-family: sans-serif;
 }
+
 .container-cards{
     display: flex;
     flex-wrap: wrap;
     width: 1200px;
-    margin: 0 auto;
-    padding: 20px 0;
+    margin: 20px auto ;
 }
 .card{
     width: 200px;
-    margin:0 5px;
+    margin:10px 5px;
+    padding: 20px 10px;    
+    background-color: #2e3a46;
+    text-align: center;
+
 }
 .card-img{
     width: 100%;
